# Calories-Analysis_V2.0-

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bvtech/caloriesanalysis/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best-sim-opt.param
app/src/main/cpp/: CMakeLists.txt  caloriesanalysis.cpp  yolo.cpp  yolo.h
app/src/main/java/com/bvtech/caloriesanalysis/: InfoActivity.java  MainActivity.java  Yolov8Ncnn.java  foodView.java  foodViewResult.java
app/src/main/java/com/bvtech/common/: Utils.java
app/src/main/res/drawable/: btn_refresh.xml  ic_launcher_background.xml
app/src/main/res/layout/: activity_food_view.xml  activity_food_view_result.xml  activity_info.xml  activity_main.xml  food_view_item.xml  food_view_result_item.xml
app/src/main/res/mipmap-anydpi-v26/: user_ico.xml
app/src/main/res/values/: strings.xml  themes.xml  user_ico_bg.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bvtech/caloriesanalysis/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
